--- a/core/components/tvtable/docs/changelog.txt
+++ b/core/components/tvtable/docs/changelog.txt
@@ -1,5 +1,9 @@
 Changelog for TVTable.
 
+1.0.2-beta
+==============
+- Many tables on document form
+
 1.0.1-beta
 ==============
 - Initial release
