--- a/core/components/tvtable/docs/changelog.txt
+++ b/core/components/tvtable/docs/changelog.txt
@@ -1,8 +1,12 @@
 Changelog for TVTable.
 
+3.4.1-beta
+==============
+- Added confirm before removing rows, columns and clearing table 
+
 3.4.0-beta
 ==============
-- Added Drag'n'Drop rows sorting 
+- Added Drag'n'Drop rows sorting
 - Added default heading property
 - Added display headers property for snippet
 - Added idx to cell tpl
