--- a/core/components/tvtable/docs/changelog.txt
+++ b/core/components/tvtable/docs/changelog.txt
@@ -1,5 +1,10 @@
 Changelog for TVTable.
 
+3.5.1-pl
+==============
+- Fixed version of assets
+- Fixed path of assets in main plugin (#10, thanks to @kondakovdm)
+
 3.5.0-pl
 ==============
 - ES6 refactor
