--- a/core/components/tvtable/docs/changelog.txt
+++ b/core/components/tvtable/docs/changelog.txt
@@ -1,5 +1,9 @@
 Changelog for TVTable.
 
+3.5.4-pl
+==============
+- Added row and col numbers
+
 3.5.3-pl
 ==============
 - Fixed bug render field on MIGX window
